Revert "Fix z-indexing of navigation footer on mobile"
This reverts commit 16815ec8d17eff69e725cc14773ea69222d0d01e.

--- a/app/javascript/flavours/glitch/styles/modern.scss
+++ b/app/javascript/flavours/glitch/styles/modern.scss
@@ -1634,6 +1634,7 @@ body:not(.flavour-glitch)
   width: 0;
   flex-grow: 1;
   border-radius: 0;
+  padding: 0;
   margin: -100px !important;
   padding: 100px !important;
   padding-inline-end: 0.7em !important;
@@ -4909,7 +4910,7 @@ body:not(.flavour-glitch)
   }
 
   #mastodon:not(:has(.navigation-panel__sign-in-banner)) .ui__header {
-    z-index: 199;
+    z-index: 200;
   }
 
   #mastodon:not(:has(.navigation-panel__sign-in-banner)) .ui__header::before,
